--- a/config.org
+++ b/config.org
@@ -446,6 +446,7 @@ Start the animation on init.
 
 
 *** 🔘 WINDOW - Incrementally resize windows.
+=SPC-w-r= (use =h,j,k,l,q,ESC= to resize)
 #+begin_src elisp
 (defhydra doom-window-resize-hydra (:hint nil)
         ("h" evil-window-decrease-width)
@@ -570,4 +571,3 @@ Start the animation on init.
        :desc "Delete all sessions"
        "d D" #'dap-delete-all-sessions)
 #+end_src
-
